--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="fr">
+
+<html lang = "fr">
+
     <head>
         <title>La Baule</title>
         <meta charset="UTF-8"/>
         <link rel="stylesheet" href="../styles/common.css"/>
         <link rel="stylesheet" href="index.css"/>
+    
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120155263-1"></script>
+            <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-120155263-1');
+            </script>
+            
     </head>
 <body>
     <header>
@@ -49,7 +61,36 @@
             <p>Essai texte</p>
             </article>
         </a>
+
     </section>
+
+    <footer>
+        <a href="https://laurinevoyage.github.io/esdes.github.io/">
+        <article id="article-7">
+            <h2>Le blog voyage de Laurine</h2>
+        </article>
+
+        <a href="alexandra-minart-esdes.github.io">
+        <article id="article-8">
+            <h2>Le blog voyage d'Alexandra</h2>
+        </article>
+
+        <a href= "https://debiesse-manon-esdes.github.io">
+        <article id="article-9">
+            <h2>Le blog voyage de Manon</h2>
+        </article>
+
+        <a href= "https://dussud-antoine-esdes.github.io/">
+        <article id="article-10">
+            <h2>Le CV d'Antoine</h2>
+        </article>
+
+        <a href= "https://devisme-constance-esdes.github.io/">
+        <article id="article-11">
+            <h2>Le CV de Constance</h2>
+        </article>
+
+    </footer>
 
 </body>
 
