--- a/pages/accueil.html
+++ b/pages/accueil.html
@@ -5,6 +5,16 @@
         <meta charset="UTF-8"/>
         <link rel="stylesheet" href="../styles/common.css"/>
         <link rel="stylesheet" href="../styles/accueil.css"/>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120155263-1"></script>
+            <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-120155263-1');
+            </script>
+
     </head>
 
 <body>
