--- a/index.html
+++ b/index.html
@@ -1,120 +1,129 @@
 <!DOCTYPE html>
 
-<html lang = "fr">
+<html lang="fr">
 
-    <head>
-        <title>La Baule</title>
-        <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="../styles/common.css"/>
-        <link rel="stylesheet" href="index.css"/>
-    
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-            <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120155263-1"></script>
-            <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'UA-120155263-1');
-            </script>
+<head>
+    <title>La Baule</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../styles/common.css" />
+    <link rel="stylesheet" href="index.css" />
 
-    </head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120155263-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-120155263-1');
+    </script>
+
+</head>
+
 <body>
     <header>
-        <h1>La Baule</h1>
+        <a href= "pages/accueil.html">
+            <button>La Baule</button>
+        </a>
     </header>
+
+    <section id="main-page">
+
+        <a href="pages/accueil.html">
+            <article id="article-1">
+                <h2>Hotel de Ville</h2>
+            </article>
+        </a>
+        <a href="pages/accueil.html">
+            <article id="article-2">
+                <h2>Le Royal</h2>
+            </article>
+        </a>
+        <a href="pages/accueil.html">
+            <article id="article-3">
+                <h2>Le Tennis</h2>
+            </article>
+        </a>
+        <a href="pages/accueil.html">
+            <article id="article-4">
+                <h2>Les Incontournables</h2>
+            </article>
+        </a>
+        <a href="pages/accueil.html">
+            <article id="article-5">
+                <h2>Les Marais Salants</h2>
+            </article>
+        </a>
+        <a href="pages/accueil.html">
+            <article id="article-6">
+                <h2>La Bibliothèque</h2>
+            </article>
+        </a>
+
+    </section>
 
     <section id="about">
         <article>
+            <h2>A propos de mon site internet</h2>
             <p>
-                Ce site internet a pour objectif de faire connaître la ville de La Baule aux touristes y venant en vacances.
-                Sur ce site on pourra y trouver les adresses des lieux incontournable de la ville comme le marché, l’avenue 
-                de Gaulle ou encore le magasin de confiserie Manuel. Plus généralement le site recensera les restaurants, 
-                les bars, les magasins de toute sorte et l’office du tourisme.  On y trouvera aussi toutes les informations 
-                concernant les activités proposées (visites, loisirs, bien-être, culture…). Il y aura aussi un onglet « Emplois », 
-                les entreprises de la ville pourront y déposer des offres d’emplois pour des postes vacants. Sur la page 
-                d’accueil apparaîtront les actualités qui seront renouvelées régulièrement. Chaque mois, un article devra 
-                être écrit sur un habitant de La Baule qui dynamise la ville. Je souhaiterai aussi développer le site 
-                internet en y incluant des liens vers les réseaux sociaux de La Baule, notamment Facebook et Instagram.
-                Je souhaiterai aussi créer un formulaire de contact. Grâce à ce formulaire, les gens pourront poser les 
-                questions qu’ils ont et par la suite je pourrai répondre à leurs questions.
-                Le but de ce site internet est de faciliter au maximum la vie des touristes et des locaux en regroupant à 
-                un seul endroit toutes les informations concernant La Baule. Pour les touristes les informations les plus 
-                intéressantes sont toutes celles qui concernent les évènements, les activités, les endroits à visiter, etc… 
-                Pour les riverains, les informations les plus intéressantes sont surtout celles qui concernent les offres 
-                d’emplois, les bars, les restaurants, etc… Au fur et à mesure je développerai le site internet en réalisant 
-                par exemple une vidéo de présentation de La Baule avec des plans sur les lieux incontournables, les activités 
-                qu’il est possible de réaliser ou encore les événements qui s’y déroulent.
+                Ce site internet a pour objectif de faire connaître la ville de La Baule aux touristes y venant en vacances. Sur ce site
+                on pourra y trouver les adresses des lieux incontournable de la ville comme le marché, l’avenue de Gaulle
+                ou encore le magasin de confiserie Manuel. Plus généralement le site recensera les restaurants, les bars,
+                les magasins de toute sorte et l’office du tourisme. On y trouvera aussi toutes les informations concernant
+                les activités proposées (visites, loisirs, bien-être, culture…). Il y aura aussi un onglet « Emplois », les
+                entreprises de la ville pourront y déposer des offres d’emplois pour des postes vacants. Sur la page d’accueil
+                apparaîtront les actualités qui seront renouvelées régulièrement. Chaque mois, un article devra être écrit
+                sur un habitant de La Baule qui dynamise la ville. Je souhaiterai aussi développer le site internet en y
+                incluant des liens vers les réseaux sociaux de La Baule, notamment Facebook et Instagram. Je souhaiterai
+                aussi créer un formulaire de contact. Grâce à ce formulaire, les gens pourront poser les questions qu’ils
+                ont et par la suite je pourrai répondre à leurs questions. Le but de ce site internet est de faciliter au
+                maximum la vie des touristes et des locaux en regroupant à un seul endroit toutes les informations concernant
+                La Baule. Pour les touristes les informations les plus intéressantes sont toutes celles qui concernent les
+                évènements, les activités, les endroits à visiter, etc… Pour les riverains, les informations les plus intéressantes
+                sont surtout celles qui concernent les offres d’emplois, les bars, les restaurants, etc… Au fur et à mesure
+                je développerai le site internet en réalisant par exemple une vidéo de présentation de La Baule avec des
+                plans sur les lieux incontournables, les activités qu’il est possible de réaliser ou encore les événements
+                qui s’y déroulent.
             </p>
         </article>
     </section>
 
-    <section id="main-page">
-    
-        <a href="pages/accueil.html">
-            <article id="article-1">
-            <h2>Hotel de ville</h2>
-            <p>Essai texte</p>
+    <section id="CV">
+        <a href="https://laurinevoyage.github.io/esdes.github.io/">
+            <article id="article-7">
+                <h3>Le blog voyage de Laurine</h3>
             </article>
-        </a>
-        <a href="labiscuiterie.html">
-            <article id="article-2">
-            <h2>La Biscuiterie</h2>
-            <p>Essai texte</p>
-            </article>
-        </a>
-        <a href="nosporduits.html">
-            <article id="article-3">
-            <h2>Nos produits</h2>
-            <p>Essai texte</p>
-            </article>
-        </a> 
-        <a href="horaires.html">
-            <article id="article-4">
-            <h2>Horaires</h2>
-            <p>Essai texte</p>
-            </article>
-        </a> 
-        <a href="plan.html">
-            <article id="article-5">
-            <h2>Plan d'accès</h2>
-            <p>Essai texte</p>
-            </article>
-        </a>
-        <a href="contacteznous.html">
-            <article id="article-6">
-            <h2>Constactez-nous</h2>
-            <p>Essai texte</p>
-            </article>
-        </a>
 
+        <a href="https://alexandra-minart-esdes.github.io">
+            <article id="article-8">
+                <h3>Le blog voyage d'Alexandra</h3>
+            </article>
+
+        <a href="http://camille-girard.fr/">
+            <article id="article-9">
+                <h3>Le CV de Camille</h3>
+            </article>
+
+        <a href="https://dussud-antoine-esdes.github.io/">
+            <article id="article-10">
+                <h3>Le CV d'Antoine</h3>
+            </article>
+
+        <a href="https://fouet-ophelie-esdes.github.io/">
+            <article id="article-11">
+                <h3>Le CV d'Ophélie</h3>
+            </article>
     </section>
 
     <footer>
-        <a href="https://laurinevoyage.github.io/esdes.github.io/">
-        <article id="article-7">
-            <h2>Le blog voyage de Laurine</h2>
-        </article>
-
-        <a href="alexandra-minart-esdes.github.io">
-        <article id="article-8">
-            <h2>Le blog voyage d'Alexandra</h2>
-        </article>
-
-        <a href= "https://debiesse-manon-esdes.github.io">
-        <article id="article-9">
-            <h2>Le blog voyage de Manon</h2>
-        </article>
-
-        <a href= "https://dussud-antoine-esdes.github.io/">
-        <article id="article-10">
-            <h2>Le CV d'Antoine</h2>
-        </article>
-
-        <a href= "https://devisme-constance-esdes.github.io/">
-        <article id="article-11">
-            <h2>Le CV de Constance</h2>
-        </article>
-
+        <p>Suivez nous sur les réseaux !</p>
+        <div class="social">
+            <a href="https://www.instagram.com/labaulebeach/?hl=fr">
+                <img src="img/instagram.png" /> </a>
+            <a href="https://www.facebook.com/pageLABAULE/">
+                <img src="img/facebook.png" /> </a>
+            <a href="https://twitter.com/VilleLaBaule">
+                <img src="img/twitter.png" /> </a>
+        </div>
     </footer>
 
 </body>
