--- a/index.html
+++ b/index.html
@@ -92,37 +92,43 @@
             <article id="article-7">
                 <h3>Le blog voyage de Laurine</h3>
             </article>
+        </a>
 
         <a href="https://alexandra-minart-esdes.github.io">
             <article id="article-8">
                 <h3>Le blog voyage d'Alexandra</h3>
             </article>
+        </a>
 
         <a href="http://camille-girard.fr/">
             <article id="article-9">
                 <h3>Le CV de Camille</h3>
             </article>
+        </a>
 
         <a href="https://dussud-antoine-esdes.github.io/">
             <article id="article-10">
                 <h3>Le CV d'Antoine</h3>
             </article>
+        </a>
 
         <a href="https://fouet-ophelie-esdes.github.io/">
             <article id="article-11">
                 <h3>Le CV d'Ophélie</h3>
             </article>
+        </a>
+
     </section>
 
     <footer>
         <p>Suivez nous sur les réseaux !</p>
         <div class="social">
             <a href="https://www.instagram.com/labaulebeach/?hl=fr">
-                <img src="img/instagram.png" /> </a>
+                <img src="img/instagram.png" />
             <a href="https://www.facebook.com/pageLABAULE/">
-                <img src="img/facebook.png" /> </a>
+                <img src="img/facebook.png" />
             <a href="https://twitter.com/VilleLaBaule">
-                <img src="img/twitter.png" /> </a>
+                <img src="img/twitter.png" />
         </div>
     </footer>
 
