--- a/index.html
+++ b/index.html
@@ -124,11 +124,17 @@
         <p>Suivez nous sur les réseaux !</p>
         <div class="social">
             <a href="https://www.instagram.com/labaulebeach/?hl=fr">
-                <img src="img/instagram.png" />
+                <img src="img/instagram.png" alt="Instagram"/>
+            </a>
+
             <a href="https://www.facebook.com/pageLABAULE/">
-                <img src="img/facebook.png" />
+                <img src="img/facebook.png" alt="FAcebook"/>
+            </a>
+
             <a href="https://twitter.com/VilleLaBaule">
-                <img src="img/twitter.png" />
+                <img src="img/twitter.png" alt="Twitter"/>
+            </a>
+            
         </div>
     </footer>
 
