--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 <body>
     <header>
-        <a href= "pages/accueil.html">
-            <button>La Baule</button>
-        </a>
+        <div class="home">
+            <a href= "pages/accueil.html">La Baule</a>
+        </div>
     </header>
 
     <section id="main-page">
