--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>La Baule</title>
+    <meta name="description" content="Bienvenue sur le site internet de la ville de La Baule. Envie de mieux connaître La Baule et ses alentours ? Vous trouverez ici toutes les informations dont vous avez besoin.">
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../styles/common.css" />
     <link rel="stylesheet" href="index.css" />
@@ -65,23 +66,30 @@
         <article>
             <h2>A propos de mon site internet</h2>
             <p>
-                Ce site internet a pour objectif de faire connaître la ville de La Baule aux touristes y venant en vacances. Sur ce site
-                on pourra y trouver les adresses des lieux incontournable de la ville comme le marché, l’avenue de Gaulle
-                ou encore le magasin de confiserie Manuel. Plus généralement le site recensera les restaurants, les bars,
-                les magasins de toute sorte et l’office du tourisme. On y trouvera aussi toutes les informations concernant
-                les activités proposées (visites, loisirs, bien-être, culture…). Il y aura aussi un onglet « Emplois », les
-                entreprises de la ville pourront y déposer des offres d’emplois pour des postes vacants. Sur la page d’accueil
-                apparaîtront les actualités qui seront renouvelées régulièrement. Chaque mois, un article devra être écrit
-                sur un habitant de La Baule qui dynamise la ville. Je souhaiterai aussi développer le site internet en y
-                incluant des liens vers les réseaux sociaux de La Baule, notamment Facebook et Instagram. Je souhaiterai
+                Ce site internet a pour objectif de faire connaître la <b>ville</b> de <b>La Baule</b> aux touristes y venant en vacances. 
+            </p><br>
+            <p>
+                Sur ce site on pourra y trouver les adresses des lieux incontournable de la <b>ville</b> comme le marché, l’avenue de Gaulle
+                ou encore le magasin de confiserie Manuel. Plus généralement le site recensera les <b>restaurants</b>, les <b>bars</b>,
+                les <b>magasins</b> de toute sorte et l’office du tourisme. On y trouvera aussi toutes les informations concernant
+                les <b>activités</b> proposées (visites, loisirs, bien-être, culture…). Il y aura aussi un onglet « Emplois », les
+                entreprises de la <b>ville</b> pourront y déposer des offres d’emplois pour des postes vacants. Sur la page d’accueil
+                apparaîtront les <b>actualités</b> qui seront renouvelées régulièrement. 
+            </p><br>
+            <p>
+                Chaque mois, un article devra être écrit sur un habitant de <b>La Baule</b> qui dynamise la <b>ville</b>. Je souhaiterai aussi développer le site internet en y
+                incluant des liens vers les réseaux sociaux de <b>La Baule</b>, notamment Facebook et Instagram. Je souhaiterai
                 aussi créer un formulaire de contact. Grâce à ce formulaire, les gens pourront poser les questions qu’ils
-                ont et par la suite je pourrai répondre à leurs questions. Le but de ce site internet est de faciliter au
+                ont et par la suite je pourrai répondre à leurs questions. 
+            </p><br>
+            <p>
+                Le but de ce site internet est de faciliter au
                 maximum la vie des touristes et des locaux en regroupant à un seul endroit toutes les informations concernant
-                La Baule. Pour les touristes les informations les plus intéressantes sont toutes celles qui concernent les
-                évènements, les activités, les endroits à visiter, etc… Pour les riverains, les informations les plus intéressantes
-                sont surtout celles qui concernent les offres d’emplois, les bars, les restaurants, etc… Au fur et à mesure
-                je développerai le site internet en réalisant par exemple une vidéo de présentation de La Baule avec des
-                plans sur les lieux incontournables, les activités qu’il est possible de réaliser ou encore les événements
+                <b>La Baule</b>. Pour les touristes les informations les plus intéressantes sont toutes celles qui concernent les
+                <b>évènements</b>, les <b>activités</b>, les endroits à visiter, etc… Pour les riverains, les informations les plus intéressantes
+                sont surtout celles qui concernent les offres d’emplois, les <b>bars</b>, les <b>restaurants</b>, les <b>magasins</b>, etc… Au fur et à mesure
+                je développerai le site internet en réalisant par exemple une vidéo de présentation de <b>La Baule</b> avec des
+                plans sur les lieux incontournables, les <b>activités</b> qu’il est possible de réaliser ou encore les <b>événements</b>
                 qui s’y déroulent.
             </p>
         </article>
