--- a/pages/accueil.html
+++ b/pages/accueil.html
@@ -1,45 +1,123 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>La Baule</title>
-        <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="../styles/common.css"/>
-        <link rel="stylesheet" href="../styles/accueil.css"/>
 
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-            <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120155263-1"></script>
-            <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'UA-120155263-1');
-            </script>
+<head>
+    <title>Les Marais Salants</title>
+    <meta name="description" content="Venez découvrir l’histoire des marais salants guérandais. Les paludiers se transmettent leur savoir-faire de générations en générations pour obtenir du sel d'une qualité exceptionnelle.">
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../styles/common.css" />
+    <link rel="stylesheet" href="../styles/accueil.css" />
 
-    </head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120155263-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-120155263-1');
+    </script>
+
+</head>
 
 <body>
     <header>
-            <div class="home">
-                <a href= "../index.html">Home</a>
-            </div>
+        <div class="home">
+            <a href="../index.html">Home</a>
+        </div>
     </header>
 
-    <section>
+    <section id="about">
+        <h1>Les marais salants guérandais</h1>
         <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc condimentum pretium bibendum. Donec nec tempor purus. Etiam volutpat maximus lorem et bibendum. Donec ac fermentum tortor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam venenatis magna vitae ante egestas volutpat. Pellentesque sit amet elit at magna scelerisque commodo ut at eros. Etiam eget ultricies turpis. In rhoncus ipsum sapien, quis eleifend dui pretium nec. Proin tincidunt egestas leo ultrices aliquet. Duis scelerisque leo vehicula felis scelerisque tempus. Nullam sagittis nibh non nisl consequat efficitur. Integer facilisis orci ipsum. Integer at facilisis risus.
-                Fusce non turpis nec diam mattis imperdiet ut non arcu. Nam laoreet nibh id nisl varius, nec porttitor ex egestas. Duis eros velit, porttitor sed nunc sed, pellentesque luctus nunc. Pellentesque in semper justo, id varius urna. Maecenas quis imperdiet nisi. Sed et pharetra erat. Duis quis urna quam. Suspendisse blandit id nisi et aliquet. Donec tristique odio sem, a consequat erat aliquam ac. Sed molestie varius tellus, non eleifend dolor porta mattis. Nam volutpat ex eget rutrum lacinia. Aliquam erat volutpat. Donec ante dolor, egestas at elit id, efficitur condimentum ex. Aliquam erat volutpat.
-                Sed porta interdum nisl. Donec euismod urna ut est posuere dapibus. Vivamus ac lobortis dui. Aenean congue augue a tellus tempor, quis hendrerit mi convallis. Ut nec faucibus ante. Sed tempor pellentesque lectus vel porttitor. Nam at velit nulla. Nulla vulputate dolor vitae metus iaculis, a facilisis tellus eleifend. Duis mattis urna quis viverra venenatis. Sed consequat sit amet nisi ut mattis. Nam semper mollis sapien, ut commodo velit eleifend ut. Nunc a felis eu massa vehicula porttitor. Nulla eu velit vel purus imperdiet vehicula. Pellentesque eu nisi ut justo efficitur dapibus.
-                Cras a nulla id diam sollicitudin pellentesque nec eget velit. Ut lobortis in lorem eu aliquet. Proin ac tempor turpis. Curabitur scelerisque luctus nulla semper iaculis. Nam ac fermentum orci. Curabitur dapibus, turpis eu eleifend ornare, ante sem gravida eros, in iaculis augue arcu quis lacus. Praesent ligula lectus, efficitur vel arcu vitae, ornare ullamcorper odio. In vel nulla quis neque malesuada lacinia. Vestibulum nibh sem, faucibus sed gravida vel, lobortis eu dui. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut lacinia, orci sit amet gravida malesuada, ante leo fermentum massa, a convallis nulla purus ut nibh. Nunc euismod faucibus felis, at scelerisque augue faucibus id. Duis vel lacus nec mauris euismod ornare. Mauris eu massa ac nibh imperdiet viverra eget quis felis. Fusce venenatis turpis vel est convallis pulvinar.
-                Mauris leo arcu, placerat ut ornare blandit, elementum id mi. Donec semper varius mi sit amet lobortis. Proin vitae purus eget quam egestas pretium id sit amet neque. In vitae nibh non ligula vehicula consectetur nec porttitor lacus. Ut a dolor porttitor, venenatis nisl at, tincidunt diam. Quisque id congue diam, et vehicula quam. Nullam iaculis felis vel consectetur venenatis. Aliquam bibendum porta gravida. Integer mollis egestas leo, nec interdum tellus pulvinar quis. Aenean facilisis vestibulum ipsum, in pharetra nisi luctus id. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae
+            Vous souhaitez découvrir des paysages uniques et magnifiques ? Venez visiter les marais salants guérandais situé à quelques
+            minutes en voiture de
+            <b>La Baule</b>. Vous y découvrirez l’histoire des
+            <b>marais salants</b>, le travail du
+            <b>paludier</b>, mais aussi la faune et la flore environnante. Entre amis ou en famille profitez d’une promenade
+            avec un guide ou seuls pour découvrir ce milieu naturel préservé. Vous découvrirez des paysages d’exception qui
+            changent du tout au tout en fonction du moment de la journée ou des saisons. Ces 2000 hectares de
+            <b>marais</b> répondent au label « Site Remarquable du Goût » depuis 1996 et bénéficient de protections réglementaires
+            telles que Natura 2000 et RAMSAR. Chaque année, grâce à des techniques de production millénaires, le travail
+            des
+            <b>paludiers</b> permet de
+            <b>récolter</b> entre 8000 et 12000 tonnes de
+            <b>gros sel</b> et 200 à 300 tonnes de
+            <b>fleur de sel</b>.
         </p>
+        <br>
+
+        <h2>Les paludiers et leurs outils</h2>
+        <br>
+        <article id="paludier">
+            <img src="../img/paludier.jpeg" alt="paludier" id="imgpaludier">
+            <p>
+                Guérande compte dans ses rangs entre 280 et 300
+                <b>paludiers</b> dont 10 femmes. Être
+                <b>paludier</b> c’est garantir un produit exceptionnel grâce à un savoir faire ancestral qui se transmet de
+                générations en générations. Leur technique unique qui n’incluent ni de mécanisation, ni de produits chimiques
+                permet au
+                <b>sel</b> de Guérande de jouir d’une qualité exceptionnelle et dans un même temps de sauvegarder un patrimoine
+                unique. Les
+                <b>paludiers</b> utilisent différents outils pour la
+                <b>récolte</b> qui ont peu changé avec le temps. La majorité de ces outils sont en bois. L’outil le plus connu
+                est le las, il est muni d’un long manche flexible de 5 mètres de long qui permet la
+                <b>récolte</b> du gros sel. La lousse à
+                <b>fleur de sel</b>, comme son nom l’indique, sert à cueillir la
+                <b>fleur de sel</b>. Traditionnellement en bois, il existe maintenant des lousses élaborées à partir de matériaux
+                modernes qui répondent aux normes de qualité alimentaire.
+            </p>
+        </article>
+
+        <br>
+        <h2>La récolte</h2>
+        <article id="recolte">
+            <img src="../img/marais2.JPG" alt="marais" id="marais">
+            <p>
+                La
+                <b>récolte</b> du
+                <b>sel</b> se prépare tout au long de l’année et suit le rythme des saisons. Durant l’hiver, pour protéger les
+                <b>salines</b> du gel et des intempéries, le
+                <b>paludier</b> les recouvre d’eau. Cette saison est exclusivement réservée à l’entretien des
+                <b>marais</b> : curage des vasières, entretien des talus, nettoyage des chenaux d’alimentation… Le printemps
+                permet aux
+                <b>paludiers</b> de commencer à préparer les
+                <b>marais</b>. C’est le moment de vider les
+                <b>salines</b> et les bassins de l’eau de pluie accumulée pendant l’hiver. Après cette étape, c’est la vase
+                et les algues qu’il faut évacuer tout en reconstruisant les digues d’argile qui vont constituer le circuit
+                hydraulique de la
+                <b>saline</b>. Avec l’été commence la saison de la
+                <b>récolte</b>. En moyenne, un
+                <b>paludier</b> exploite 50 à 60 œillets soit une superficie de 3 à 4 hectares. La production obtenue est malheureusement
+                très variable car la production de sel dépend de l’ensoleillement, du vent mais aussi de la pluviométrie.
+                La fin de l’été et le début de l’automne sonne la fin de la
+                <b>récolte</b>. Il temps pour les
+                <b>paludiers</b> de mettre le
+                <b>sel</b>
+                à l’abri pour l’hiver et de reprendre un rythme de travail moins intensif jusqu’à la mi-novembre. A Guérande un
+                <b>paludier</b>
+                seul produit en moyenne 60 à 90 tonnes de
+                <b>gros sel</b> et 2 à 3 tonnes de
+                <b>fleur de sel </b>par an.
+            </p>
+        </article>
     </section>
 
     <footer>
-                <p>VILLE DE LA BAULE ESCOUBLAC<br/>
-                    Hôtel de Ville<br/>
-                    7, avenue Olivier Guichard<br/>
-                    44500 La Baule-Escoublac<br/>
-                </p>
+        <p>Suivez nous sur les réseaux !</p>
+        <div class="social">
+            <a href="https://www.instagram.com/labaulebeach/?hl=fr">
+                <img src="../img/instagram.png" alt="Instagram" />
+            </a>
+
+            <a href="https://www.facebook.com/pageLABAULE/">
+                <img src="../img/facebook.png" alt="FAcebook" />
+            </a>
+
+            <a href="https://twitter.com/VilleLaBaule">
+                <img src="../img/twitter.png" alt="Twitter" />
+            </a>
+
+        </div>
     </footer>
 </body>
 
